--- a/_layouts/threadpage.html
+++ b/_layouts/threadpage.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>Adam Dicker the Con Artist</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="http://adamdicker.co/">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
@@ -15,12 +16,16 @@
     <section class="page-header">
       <h1 class="project-name">Adam Dicker the Con Artist</h1>
       <h2 class="project-tagline">Is Adam Dicker a criminal? You decide.</h2>
+      <span>{% if page.pagenum > 1 %}<a href="pages/{{ page.pagenum | minus: 1 }}.html">&lt;- Previous Page</a>{% endif %} | {% if page.pagenum < 114 %}<a href="pages/{{ page.pagenum | plus: 1 }}.html">Next Page -&gt;</a>{% endif %}</span>
     </section>
 
     <section class="main-content">
-      {{ content }}
+      <ol>
+        {{ content }}
+      </ol>
       
       <footer class="site-footer">
+        <span>{% if page.pagenum > 1 %}<a href="pages/{{ page.pagenum | minus: 1 }}.html">&lt;- Previous Page</a>{% endif %} | {% if page.pagenum < 114 %}<a href="pages/{{ page.pagenum | plus: 1 }}.html">Next Page -&gt;</a>{% endif %}</span>
         <span class="site-footer-credits">This page uses <a href="https://twitter.com/jasonlong">Jason Long</a>'s <a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a>.</span>
       </footer>
     </section>
