--- a/_layouts/threadpage.html
+++ b/_layouts/threadpage.html
@@ -16,7 +16,7 @@
     <section class="page-header">
       <h1 class="project-name">Adam Dicker the Con Artist</h1>
       <h2 class="project-tagline">Is Adam Dicker a criminal? You decide.</h2>
-      <span>{% if page.pagenum > 1 %}<a href="pages/{{ page.pagenum | minus: 1 }}.html">&lt;- Previous Page</a>{% endif %} | {% if page.pagenum < 114 %}<a href="pages/{{ page.pagenum | plus: 1 }}.html">Next Page -&gt;</a>{% endif %}</span>
+      <span>{% if page.pagenum > 1 %}<a href="pages/{{ page.pagenum | minus: 1 }}.html">&lt;- Previous Page</a>{% endif %} | {% if page.pagenum < site.pagecount %}<a href="pages/{{ page.pagenum | plus: 1 }}.html">Next Page -&gt;</a>{% endif %}</span>
     </section>
 
     <section class="main-content">
@@ -25,7 +25,7 @@
       </ol>
       
       <footer class="site-footer">
-        <span>{% if page.pagenum > 1 %}<a href="pages/{{ page.pagenum | minus: 1 }}.html">&lt;- Previous Page</a>{% endif %} | {% if page.pagenum < 114 %}<a href="pages/{{ page.pagenum | plus: 1 }}.html">Next Page -&gt;</a>{% endif %}</span>
+        <span>{% if page.pagenum > 1 %}<a href="pages/{{ page.pagenum | minus: 1 }}.html">&lt;- Previous Page</a>{% endif %} | {% if page.pagenum < site.pagecount %}<a href="pages/{{ page.pagenum | plus: 1 }}.html">Next Page -&gt;</a>{% endif %}</span>
         <span class="site-footer-credits">This page uses <a href="https://twitter.com/jasonlong">Jason Long</a>'s <a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a>.</span>
       </footer>
     </section>
