--- a/_layouts/threadpage.html
+++ b/_layouts/threadpage.html
@@ -11,21 +11,27 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <style>
+      .page-header a
+      {
+        color: white;
+      }
+    </style>
   </head>
   <body>
     <section class="page-header">
       <h1 class="project-name">Adam Dicker the Con Artist</h1>
       <h2 class="project-tagline">Is Adam Dicker a criminal? You decide.</h2>
-      <span>{% if page.pagenum > 1 %}<a href="pages/{{ page.pagenum | minus: 1 }}.html">&lt;- Previous Page</a>{% endif %} | {% if page.pagenum < site.pagecount %}<a href="pages/{{ page.pagenum | plus: 1 }}.html">Next Page -&gt;</a>{% endif %}</span>
+      <span>{% if page.pagenum > 1 %}<a href="pages/{{ page.pagenum | minus: 1 }}.html">&lt;- Previous Page</a>{% endif %} {% if page.pagenum > 1 and page.pagenum < site.pagecount %}|{% endif %} {% if page.pagenum < site.pagecount %}<a href="pages/{{ page.pagenum | plus: 1 }}.html">Next Page -&gt;</a>{% endif %}</span>
     </section>
 
     <section class="main-content">
       <ol>
         {{ content }}
       </ol>
-      
+      <div>{% if page.pagenum > 1 %}<a href="pages/{{ page.pagenum | minus: 1 }}.html">&lt;- Previous Page</a>{% endif %} {% if page.pagenum > 1 and page.pagenum < site.pagecount %}|{% endif %} {% if page.pagenum < site.pagecount %}<a href="pages/{{ page.pagenum | plus: 1 }}.html">Next Page -&gt;</a>{% endif %}</div>
+
       <footer class="site-footer">
-        <span>{% if page.pagenum > 1 %}<a href="pages/{{ page.pagenum | minus: 1 }}.html">&lt;- Previous Page</a>{% endif %} | {% if page.pagenum < site.pagecount %}<a href="pages/{{ page.pagenum | plus: 1 }}.html">Next Page -&gt;</a>{% endif %}</span>
         <span class="site-footer-credits">This page uses <a href="https://twitter.com/jasonlong">Jason Long</a>'s <a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a>.</span>
       </footer>
     </section>
