--- a/_layouts/threadpage.html
+++ b/_layouts/threadpage.html
@@ -22,7 +22,8 @@
     <section class="page-header">
       <h1 class="project-name">Adam Dicker the Con Artist</h1>
       <h2 class="project-tagline">Is Adam Dicker a criminal? You decide.</h2>
-      <span>{% if page.pagenum > 1 %}<a href="pages/{{ page.pagenum | minus: 1 }}.html">&lt;- Previous Page</a>{% endif %} {% if page.pagenum > 1 and page.pagenum < site.pagecount %}|{% endif %} {% if page.pagenum < site.pagecount %}<a href="pages/{{ page.pagenum | plus: 1 }}.html">Next Page -&gt;</a>{% endif %}</span>
+      <div><input type="text" class="st-default-search-input" placeholder="Search"></div>
+      <div>{% if page.pagenum > 1 %}<a href="pages/{{ page.pagenum | minus: 1 }}.html">&lt;- Previous Page</a>{% endif %} {% if page.pagenum > 1 and page.pagenum < site.pagecount %}|{% endif %} {% if page.pagenum < site.pagecount %}<a href="pages/{{ page.pagenum | plus: 1 }}.html">Next Page -&gt;</a>{% endif %}</div>
     </section>
 
     <section class="main-content">
@@ -35,5 +36,14 @@
         <span class="site-footer-credits">This page uses <a href="https://twitter.com/jasonlong">Jason Long</a>'s <a href="https://github.com/jasonlong/cayman-theme">Cayman theme</a>.</span>
       </footer>
     </section>
+    
+    <script type="text/javascript">
+      (function(w,d,t,u,n,s,e){w['SwiftypeObject']=n;w[n]=w[n]||function(){
+      (w[n].q=w[n].q||[]).push(arguments);};s=d.createElement(t);
+      e=d.getElementsByTagName(t)[0];s.async=1;s.src=u;e.parentNode.insertBefore(s,e);
+      })(window,document,'script','//s.swiftypecdn.com/install/v2/st.js','_st');
+    
+      _st('install','sVFZ4znFYgxszzpaHvNF','2.0.0');
+    </script>
   </body>
 </html>
