--- a/_layouts/threadpage.html
+++ b/_layouts/threadpage.html
@@ -11,6 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/threadpage.css" media="screen">
   </head>
   <body>
     <section class="page-header">
@@ -20,7 +21,7 @@
     </section>
 
     <section class="main-content">
-      <ol>
+      <ol class="thread-posts">
         {{ content }}
       </ol>
       <div>{% if page.pagenum > 1 %}<a href="pages/{{ page.pagenum | minus: 1 }}.html">&lt;- Previous Page</a>{% endif %} {% if page.pagenum > 1 and page.pagenum < site.pagecount %}|{% endif %} {% if page.pagenum < site.pagecount %}<a href="pages/{{ page.pagenum | plus: 1 }}.html">Next Page -&gt;</a>{% endif %}</div>
