--- a/stylesheets/threadpage.css
+++ b/stylesheets/threadpage.css
@@ -6,6 +6,7 @@ ol.threadpage {
 .message {
   margin: 0.7rem 0;
   padding: 0;
+  overflow: hidden;
   list-style: none; }
   .message + .message {
     border-bottom: solid 0.3rem #dce6f0; }
@@ -30,10 +31,11 @@ ol.threadpage {
     margin: 0;
     padding: 0; }
     .messageUserInfo dt {
+      font-weight: normal;
       display: inline-block; }
     .messageUserInfo dd {
       display: inline-block;
-      margin-left: 0.2em; }
+      margin: 0 0 0 0.2em; }
 
 .messageInfo {
   padding: 0.7rem; }
